Update: Improved aesthetic with new background and colors

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <span class="dot"></span> مباشر 24/7
         </div>
         
-        <h1>Lofi Radio Station</h1>
+        <h1>bod Radio Station</h1>
         <p>استرخي، ركز، وابدأ العمل.</p>
 
         <div class="controls">
