Final polish: V3 design with glass disc and new header layout

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         ];
 
         let currentStationIndex = 0;
-        const backgrounds = [ 'https://media.giphy.com/media/tXzFpjeqVnE7m/giphy.gif', 'https://i.pinimg.com/originals/79/5c/ab/795cabc4647f73b365e2e6eabd0f34dc.gif', 'https://media.giphy.com/media/U3qYN8S0j3bpK/giphy.gif', 'https://media.giphy.com/media/LDBuYzAwu8L4I/giphy.gif' ];
+        const backgrounds = [ 'https://media.giphy.com/media/tXzFpjeqVnE7m/giphy.gif', 'https://i.pinimg.com/originals/37/42/94/3742942e1d424f91234de1b1b8d71b40.gif', 'https://i.pinimg.com/originals/c6/a9/bf/c6a9bf7e601b747afea5cb1a255606c1.gif', 'https://i.pinimg.com/originals/6c/d6/26/6cd626ea6d4e6f9dd0f6e336a29710c4.gif' ];
         let currentBgIndex = 0;
         const themes = ['', 'theme-purple', 'theme-orange'];
         let currentThemeIndex = 0;
